# 2026_bo_yi

./: .clang-format  .gitignore  ALPHAZERO_REFACTOR_PLAN.md  CMakeLists.txt  DOTS_AND_BOXES_GOMOKU_ALPHAZERO_IMPROVEMENT_PLAN.md  README.md  SETUP.md  进度.md
data/evaluations/: baseline_iter1_vs_heuristic_20260425.txt  candidate_onehot_long_vs_heuristic_20260425.txt  candidate_onehot_vs_heuristic_20260425.txt  candidate_vs_heuristic_20260425.txt  confidence_filtered_mlp_validation_20260425.txt  confidence_filtered_temp025_validation_20260425.txt  onehot_cnn_validation_diagnostic_20260425.txt  onehot_mlp_validation_diagnostic_20260425.txt  overfit_2k_mlp_20260425.txt  phase0_champion_baseline.md  policy_sharpening_overfit_20260425.txt  teacher800_conf03_fileval_20260502.txt  teacher800_conf03_validation_20260502.txt  teacher800_confidence_weight_fileval_20260502.txt
data/models/: backward_full15_retrain.onnx  backward_full15_retrain_report.json  backward_model.onnx  backward_st0_iter10_report.json  backward_st0_iter11_report.json  backward_st0_iter12_report.json  backward_st0_iter13_report.json  backward_st0_iter14_report.json  backward_st0_iter15_report.json  backward_st0_iter16_report.json  backward_st0_iter6_report.json  backward_st0_iter7_report.json  backward_st0_iter8_report.json  backward_st0_iter9_report.json  backward_st10_iter4_report.json  backward_st15_iter3_report.json  backward_st20_iter2_report.json  backward_st25_iter1_report.json  backward_st25_iter2_report.json  backward_st5_iter5_report.json  backward_test_report.json  phase4_mlp_report.json  phase4_resnet_m_report.json  phase4_resnet_s_report.json  resnet_m.onnx  resnet_s.onnx  trainerv2_test_report.json
eval/: eval_vs_baseline.py
src/: backward_selfplay_main.cpp  evaluate_ai_main.cpp  main.cpp  selfplay_main.cpp
src/AI/: Node.cpp  Node.h  UCT.cpp  UCT.h  assess.cpp  assess.h  board.cpp  board.h  define.h
src/AI/az/: az_action.cpp  az_action.h  az_encoder.cpp  az_encoder.h  az_evaluator.cpp  az_evaluator.h  az_expert.cpp  az_expert.h  az_mcts.cpp  az_mcts.h  az_move.cpp  az_move.h  az_neural_net.cpp  az_neural_net.h  az_node.cpp  az_node.h  az_onnx_evaluator.cpp  az_onnx_evaluator.h  az_selfplay.cpp  az_selfplay.h  az_types.h
src/CJSON/: cJSON.h  datarecorder.cpp  datarecorder.h
src/element/: Time.cpp  Time.h
test/: az_tests.cpp  xieyi.cpp
tools/: rsync_data.sh  run_rl_on_server.sh
train/: augmentation.py  backward_training.py  compare_phase4.py  dataset.py  diag_selfplay_diversity.py  diag_split_shift.py  export_onnx.py  export_weights.py  model.py  requirements.txt  rl_finetune_ppo.py  test_augmentation.py  test_onnx_consistency.py  train.py
